# flex-energy-price-calculator

./: .envrc  .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
flex_energy_price_calculator/command/: __init__.py
flex_energy_price_calculator/models/base/: __init__.py
flex_energy_price_calculator/models/gogreenenergy/: gogreenenergyflex.py
flex_energy_price_calculator/models/oekostrom/: oekoflow.py
hack/: run-all-checks.sh
